--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
         <!ENTITY app_name "Dodeca Meditation">
-        <!ENTITY version_name "2.0">
+        <!ENTITY version_name "2.1">
         <!ENTITY feedback_email "pierbezuhoff2016@gmail.com">
         ]>
 <resources>
@@ -200,5 +200,13 @@
     <string name="circle_show_description">Visible</string>
     <string name="toggle_folders">Toggle folders</string>
     <string name="settings_ddu_files_title">Revert defaults</string>
+
+    <!-- Adjust angles dialog -->
+    <string name="adjust_angles_dialog_message">Adjust engines\' angles</string>
+    <string name="adjust_angles_dialog_edit">Apply</string>
+    <string name="adjust_angles_dialog_cancel">Cancel</string>
+    <string name="angle1_title">Rank 0 engine\'s angle will be multiplied by %d/%d</string>
+    <string name="angle2_title">Rank 1 engine\'s angle will be multiplied by %d/%d</string>
+    <string name="angle3_title">Rank 2 engine\'s angle will be multiplied by %d/%d</string>
 
 </resources>
