--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,17 +173,19 @@
     <string name="delete_all_alert_message">"Do you want to permanently delete all ddu-pictures in the current folder?     "</string>
     <string name="delete_all_alert_title">Deletion confirmation</string>
 
-    <!-- Color chooser dialog -->
+    <!-- Mass editor dialog -->
     <string name="all_circles_checkbox_description">Select all</string>
     <string name="sort_by_color_description">Sort by color</string>
     <string name="sort_by_name_description">Sort by name</string>
+    <string name="sort_by_rule_description">Sort by rule</string>
     <string name="circle_layout_description">Edit the circle</string>
     <string name="circle_image_description">Circle image</string>
     <string name="circle_name_initial_text">#</string>
     <string name="expand_group_description">Expand/collapse the group</string>
-    <string name="choose_circle_dialog_message">Choose circles to edit</string>
-    <string name="choose_circle_dialog_edit">Edit</string>
-    <string name="choose_circle_dialog_cancel">Cancel</string>
+    <string name="mass_editor_dialog_message">Choose circles to edit</string>
+    <string name="mass_editor_dialog_edit">Edit</string>
+    <string name="mass_editor_dialog_select">Select</string>
+    <string name="mass_editor_dialog_cancel">Cancel</string>
     <string name="edit_circle_dialog_message_single">Edit the circle %s</string>
     <string name="edit_circle_dialog_message_plural">Edit the circles %s</string>
     <string name="edit_circle_dialog_apply">Apply</string>
