--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -162,7 +162,6 @@
     <string name="multiselect_mode_button_title">Режим выбора и изменения окружностей</string>
     <string name="show_everything_button_title">Показать/скрыть невидимые окружности</string>
     <string name="edit_circles_button_title">Редактировать окружности</string>
-    <string name="edit_circles_colors_button_title">Редактировать цвета окружностей</string>
     <string name="adjust_angles_dialog_message">Изменить углы двигателей</string>
     <string name="adjust_angles_dialog_edit">Применить</string>
     <string name="adjust_angles_dialog_cancel">Отмена</string>
@@ -171,4 +170,6 @@
     <string name="angle3_title">Угол двигателя ранга 2 будет умножен на %d/%d</string>
     <string name="mass_editor_dialog_select">Выбрать</string>
     <string name="sort_by_rule_description">Сортировать по правилу</string>
+    <string name="background_color">Цвет фона</string>
+    <string name="mass_editor_button_title">Редактор окружностей</string>
 </resources>
