provisional global recoloring

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
         <!ENTITY app_name "Dodeca Meditation">
-        <!ENTITY version_name "2.1">
+        <!ENTITY version_name "2.2">
         <!ENTITY feedback_email "pierbezuhoff2016@gmail.com">
         ]>
 <resources>
@@ -186,6 +186,7 @@
     <string name="mass_editor_dialog_message">Choose circles to edit</string>
     <string name="mass_editor_dialog_edit">Edit</string>
     <string name="mass_editor_dialog_select">Select</string>
+    <string name="mass_editor_dialog_recolor_everything">Recolor everything</string>
     <string name="mass_editor_dialog_cancel">Cancel</string>
     <string name="edit_circle_dialog_message_single">Edit the circle %s</string>
     <string name="edit_circle_dialog_message_plural">Edit the circles %s</string>
