--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
         <!ENTITY app_name "Додека Медитация">
-        <!ENTITY version_name "2.2">
+        <!ENTITY version_name "1.6">
         <!ENTITY feedback_email "pierbezuhoff2016@gmail.com">
         ]>
 <resources>
@@ -21,10 +21,10 @@
     <string name="ups_summary">%s пересчётов окружностей в секунду (скорость движения окружностей)</string>
     <string name="settings_display_title">Внешний вид</string>
     <string name="settings_about_title">Информация</string>
-    <string name="description_summary">&app_name;: порт DodecaLook для Android</string>
+    <string name="description_summary">&app_name;: генеративный видеоарт, основанный на геометрии окружности</string>
     <string name="version_title">Версия</string>
     <string name="version_summary">&app_name; &version_name;</string>
-    <string name="copyright_summary">© Револьт Пименов (алгоритмы, эстетическая геометрия), Иван Никитин (программирование)</string>
+    <string name="copyright_summary">© Револьт Пименов (эстетическая геометрия), Иван Никитин (программирование)</string>
     <string name="support_title">Обратная связь и поддержка</string>
     <string name="fps_summary">Число перерисовок в секунду, скорость перерисовки</string>
     <string name="reverse_motion">Обратить движение</string>
