--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
         <!ENTITY app_name "Dodeca Meditation">
-        <!ENTITY version_name "2.2">
+        <!ENTITY version_name "1.6">
         <!ENTITY feedback_email "pierbezuhoff2016@gmail.com">
         ]>
 <resources>
@@ -126,11 +126,11 @@
     <string name="preview_smart_updates_summary">Number of updates depends on the ddu complexity</string>
 
     <string name="settings_about_title">About</string>
-    <string name="description_summary">&app_name;: an Android port of DodecaLook</string>
+    <string name="description_summary">&app_name;: generative videoart based on inversive geometry</string>
     <string name="version_title">Version</string>
     <string name="version_summary">&app_name; &version_name;</string>
     <string name="copyright_title" translatable="false">Copyright</string>
-    <string name="copyright_summary">"© Revolt Pimenov (algorithms, aesthetic geometry), Ivan Nikitin (programming)\n    "</string>
+    <string name="copyright_summary">"© Revolt Pimenov (aesthetic geometry), Ivan Nikitin (programming)\n    "</string>
     <string name="support_title">Feedback and support</string>
     <string name="feedback_subject" translatable="false">&app_name; support</string>
     <string name="developer_email" translatable="false">&feedback_email;</string>
