--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,6 +97,7 @@
     <string name="rotate_shapes_summary">Rotate s̶q̶u̶a̶r̶e̶, cross, bars when updating</string>
     <!-- ^ -->
     <string name="show_stat_title">Show statistics</string>
+    <string name="draw_screen_filling_circles_title">Draw screen filling circles</string>
     <string name="stat_n_updates_text">%d updates</string>
     <string name="stat_x_updates_per_text">%d updates per %.3f seconds</string>
     <string name="stat_x_updates_per_initial"># updates per #</string>
