--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -202,7 +202,7 @@
     <string name="mass_editor_dialog_message">Choose circles to edit</string>
     <string name="mass_editor_dialog_edit">Edit</string>
     <string name="mass_editor_dialog_select">Select</string>
-    <string name="mass_editor_dialog_recolor_everything">Shift color palette</string>
+    <string name="mass_editor_dialog_recolor_everything">Shift colors</string>
     <string name="mass_editor_dialog_cancel">Cancel</string>
     <string name="edit_circle_dialog_message_single">Edit the circle %s</string>
     <string name="edit_circle_dialog_message_plural">Edit the circles %s</string>
@@ -220,7 +220,7 @@
     <string name="circle_show_description">Visible</string>
     <string name="edit_circle_rule_hint">Rule</string>
     <string name="inline_ddu_button_description">Inline ddu</string>
-    <string name="scale_and_centerize_inlined_ddu_checkbox_description">Adjust the center and scale of the inlined</string>
+    <string name="scale_and_centerize_inlined_ddu_checkbox_description">Hide the original ddu</string>
     <string name="background_color">Background color</string>
 
     <!-- Adjust angles dialog -->
